<resources>
    <string name="app_name">Chuck Norris Jokes</string>
    <string name="strRandom">Random Joke</string>
    <string name="strCategory">Joke Categories </string>
    <string name="strSelect">Select a Category : </string>
    <string name="strOption">Select an Option : </string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stlogo">LOGO</string>
    <string name="textview">Category</string>
</resources>
