<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".main.MainView">

    <ImageView
        android:id="@+id/iVNameApp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/stlogo" />

    <TextView
        android:id="@+id/tvNameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tvOption"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:gravity="center_vertical"
            android:text="@string/strOption"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="normal|bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRandom"
            android:textColor="@color/colorWhite"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/strRandom"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:backgroundTint="@color/colorAccent" />

        <Button
            android:id="@+id/btnCategory"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/strCategory"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>

